--- a/grid.html
+++ b/grid.html
@@ -41,7 +41,9 @@
             <button class="btnn btnn2"> home man</button>
             <button class="btnn btnn3"> home man</button>
             <button class="btnn btnn4"> home man</button>
+             
 
         </div>
+        <div><img src="asserts\images\images 13.jpg" alt=""></div>
 </body>
 </html>
