--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </tr>
             <tr class="idium">
                 <td>total</td>
-                <td>5</td>
+                <td class="col">5</td>
                 <td></td>
                 <td></td>
             </tr>
@@ -180,10 +180,10 @@
     </div>
         <div class="lone-ball"><img src="asserts\images\images 5.jpg"
             alt="football in the sky with  a green background"><p class="lone">Lorem ipsum dolor sit amet consectetur adipisicing
+                necessitatibus commodi doloribus fugiat excepturi labore fugit voluptatibus nobis libero cum! Illo.</div>
                 elit. Impedit voluptate nulla quo reiciendis cum laboriosam necessitatibus, nisi, deserunt molestias
                 consequatur voluptatem provident at in quia quaerat exercitationem iusto vero recusandae.Ipsum ex odit rem
                 ea non exercitationem nemo id modi esse possimus minima, doloremque dicta, ducimus cupiditate sunt
-                necessitatibus commodi doloribus fugiat excepturi labore fugit voluptatibus nobis libero cum! Illo.</div>
     </p>
 </body>
 
